--- a/NoobsHackathon/app/src/main/AndroidManifest.xml
+++ b/NoobsHackathon/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ChonDapAnActivity"></activity>
+        <activity android:name=".SuaMonHocActivity" />
+        <activity android:name=".SuaDapAnActivity"></activity>
     </application>
 
 </manifest>
